2001-05-25  Peter Williams  <peterw@ximian.com>

	* gtkdoc-mkdb.in (ScanSourceFile): Skip single-line comments -- 
	prevents barfing on ORBit-generated files.

2001-05-20  Damon Chaplin  <damon@ximian.com>

	* examples/Makefile.am (sgml-build.stamp): replaced use of wildcard
	(which isn't portable) with original *.sgml. I think this just means
	that the first time you try to build the docs it will fail, but if
	you run make again it will work.

	* doc/setting-up.txt: explained that make may fail the first time.

2001-05-19  Damon Chaplin  <damon@ximian.com>

	* README: 
	* doc/README:
	* doc/setting-up.txt:
	* doc/sections-file.txt:
	* doc/authors.txt: updated docs to cover simpler setup procedure.

	* doc/gtk_button.txt:
	* doc/manpage:
	* doc/manpage.man:
	* doc/notes.txt: removed out-of date stuff.

	* Makefile.am (dist-hook): updated so it doesn't try to remove old
	examples subdirectory stuff.

2001-05-19  Damon Chaplin  <damon@ximian.com>

	* examples/gnome/*:
	* examples/gnomeui/*: removed out-of-date example files.

	* examples/configure.in:
	* examples/Makefile.am: new example setup mostly copied from GTK+.

	* examples/README: describe the example configure.in/Makefile.am.

2001-05-19  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in: added --help option and changed output slightly to
	make more compatable with XML. Patch from Toshio Kuratomi
	<badger@prtr-13.ucsc.edu>

2001-05-19  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-mkdb.in (OutputFunction): changed a '?' to a '*' so we accept
	multi-dimensional array function parameters. Patch from Paolo Casarini
	<casarini@CS.UniBO.IT>

2001-05-12  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scangobj.in: 
	* gtkdoc-scanobj.in: used "*pos = 0" to avoid problems with backslashes
	in '\0'.

	* configure.in: removed dsssl dirs stuff, since we use public entities
	now.

	* gtkdoc-mkdb.in (OutputBook): if there is no main SGML file we create