@@ -1,3 +1,8 @@
+Thu Jun 21 11:57:16 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* gtkdoc-scangobj.in: Conform to changes in GObject API
+	for property retrieval.
+
 2001-05-25  Peter Williams  <peterw@ximian.com>
 
 	* gtkdoc-mkdb.in (ScanSourceFile): Skip single-line comments -- 
